Added contacts and refactored tags with texts

--- a/css/recycled/text-sizes.css
+++ b/css/recycled/text-sizes.css
@@ -19,6 +19,7 @@
   color: #5A6478;
 }
 
+/* h4 */
 .ml-text {
   font-weight: 600;
   font-size: 22px;
@@ -26,6 +27,7 @@
   color: #2D3C5A;
 }
 
+/* h3 */
 .l-text {
   font-weight: 600;
   font-size: 24px;
@@ -33,6 +35,7 @@
   color: #2D3C5A;
 }
 
+/* h2 */
 .xl-text {
   font-weight: 700;
   font-size: 32px;
