--- a/css/recycled/buttons.css
+++ b/css/recycled/buttons.css
@@ -29,3 +29,14 @@
   color: #55A5FF;
   box-shadow: 0px 20px 30px rgba(45, 60, 90, 0.1);
 }
+
+.btn-blue:focus {
+  box-shadow: none;
+}
+
+.contact__btn {
+  padding: 16px 33px;
+  width: 220px;
+  max-width: 100%;
+  border-radius: 8px;
+}
