--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,39 @@
-/* todo make universal classes for some fonts (padding and margin */
-/* todo to go through the titles and substitute the h1-6 */
+/* todo make universal classes for padding and margin or substitute from Bootstrap */
+
+.remove-link-styles {
+  text-decoration: none;
+  color: inherit;
+}
+
+/* card styles */
+
+.card-border {
+  box-sizing: border-box;
+  background: #FFFFFF;
+  border: 1px solid #E6E6E6;
+  border-radius: 24px;
+}
+
+.card-telegram {
+  width: 160px;
+  background: rgba(73, 165, 232, 0.1);
+  border-color: rgba(73, 165, 232, 0.1);
+  border-radius: 24px;
+}
+
+.card-viber {
+  width: 160px;
+  background: rgba(136, 97, 178, 0.1);
+  border-color: rgba(136, 97, 178, 0.1);
+  border-radius: 24px;
+}
+
+.card-facebook {
+  width: 160px;
+  background: rgba(74, 153, 247, 0.1);
+  border-color: rgba(74, 153, 247, 0.1);
+  border-radius: 24px;
+}
 
 /* tags styles */
 
@@ -14,7 +48,15 @@ section {
   padding-bottom: 183px;
 }
 
-/* nav section */
+section:last-child {
+  padding-bottom: 0;
+}
+
+footer {
+  margin-top: 60px;
+}
+
+/* nav block */
 
 .nav-link {
   font-weight: 400;
@@ -69,7 +111,7 @@ section {
   /*z-index: 999;*/
 }
 
-/* cash-out section */
+/* cash-out block */
 
 .cash-out {
   position: absolute;
@@ -104,7 +146,7 @@ section {
   right: 14px;
 }
 
-/* output section */
+/* output block */
 
 .output {
   margin-bottom: 40px;
@@ -124,13 +166,6 @@ section {
   margin: auto 30px;
 }
 
-.card-border {
-  box-sizing: border-box;
-  background: #FFFFFF;
-  border: 1px solid #E6E6E6;
-  border-radius: 24px;
-}
-
 .benefits__credit-card:hover {
   background: rgba(85, 165, 255, 0.05);
   border: 1px solid rgba(85, 165, 255, 0.1);
@@ -146,7 +181,7 @@ section {
   border: 1px solid rgba(20, 210, 165, 0.1);
 }
 
-/* joining section */
+/* joining block */
 
 .joining {
   margin-top: 42px;
@@ -184,20 +219,29 @@ section {
   color: inherit;
 }
 
-.card-telegram {
-  width: 160px;
-  background: rgba(73, 165, 232, 0.1);
-  border-radius: 24px;
+/* contact section */
+
+.contact {
+  margin-top: 87px;
 }
 
-.card-viber {
-  width: 160px;
-  background: rgba(136, 97, 178, 0.1);
-  border-radius: 24px;
+.contact__img {
+  margin-bottom: 39px;
 }
 
-.card-facebook {
-  width: 160px;
-  background: rgba(74, 153, 247, 0.1);
-  border-radius: 24px;
+.contact__cards {
+  max-width: 730px;
+}
+
+.contact__email-img {
+  margin-top: 34px;
+}
+
+.contact__email {
+  margin-top: 16px;
+  margin-bottom: 26px;
+}
+
+.contact__phone {
+  margin-top: 16px;
 }
