Partial realization of the burger menu and adaptive first section

--- a/css/recycled/paddings-and-margins.css
+++ b/css/recycled/paddings-and-margins.css
@@ -17,3 +17,13 @@
 .mb-xl {
   margin-bottom: 60px;
 }
+
+@media screen and (max-width: 360px) {
+  .mb-m {
+    margin-bottom: 18px;
+  }
+
+  .mb-l {
+    margin-bottom: 30px;
+  }
+}
