--- a/css/recycled/buttons.css
+++ b/css/recycled/buttons.css
@@ -30,10 +30,6 @@
   box-shadow: 0px 20px 30px rgba(45, 60, 90, 0.1);
 }
 
-.btn-blue:focus, .btn-green:focus, .btn-dark:focus, .btn-close:focus {
-  box-shadow: none;
-}
-
 .btn-language {
   color: #969DAC;
   background: #FFFFFF;
@@ -62,4 +58,13 @@
   position: absolute;
   right: 41px;
   top: 41px;
+}
+
+.modal-header .btn-close {
+  right: 22px;
+  top: 31px;
+}
+
+.btn-blue:focus, .btn-green:focus, .btn-dark:focus, .btn-close:focus, .navbar-toggler:focus {
+  box-shadow: none;
 }
