--- a/css/style.css
+++ b/css/style.css
@@ -84,8 +84,78 @@ p {
   padding-right: 20px;
 }
 
-/* nav block */
+.works .nav-pills {
+  margin-left: 100px;
+}
 
+.works .nav-link {
+  padding: 0 0 0 30px;
+  margin-bottom: 40px;
+  /*padding-left: 30px;*/
+}
+
+.works .nav-link::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  width: 2px;
+  background-color: #F0F0F0;
+}
+
+.works .nav-link.active::before {
+  background-color: #55A5FF;
+  height: 30%;
+  bottom: auto;
+}
+
+.works .nav-link.active::after {
+  content: "";
+  position: absolute;
+  top: 30%;
+  bottom: 0;
+  left: 0;
+  width: 2px;
+  background-color: #F0F0F0;
+}
+
+.works .nav-pills .nav-link {
+  position: relative;
+}
+
+.operations .col {
+  padding-right: 0;
+}
+
+.operations-amounts .col {
+  padding-left: 0;
+}
+
+.benefits .nav-link {
+  position: relative;
+  padding-bottom: 14px;
+}
+
+.benefits .nav-link::after {
+  content: "";
+  position: absolute;
+  bottom: 0;
+  left: -10%;
+  width: 120%;
+  height: 2px;
+  background-color: #F0F0F0;
+}
+
+.benefits .nav-link.active::after {
+  background-color: #55A5FF;
+}
+
+.benefits .nav-item {
+  width: 160px;
+}
+
+/* nav block */
 .container-fluid {
   padding: 0;
 }
@@ -184,7 +254,8 @@ p {
   width: 330px;
   bottom: 0px;
   background-color: #ffffff;
-  border-radius: 24px;
+  border-top-left-radius: 24px;
+  border-top-right-radius: 24px;
   padding: 26px 14px;
 }
 
@@ -193,8 +264,13 @@ p {
 }
 
 .works__icon {
+  margin-right: 13px;
   width: 24px;
   height: 24px;
+}
+
+.active .works__icon-color {
+  fill: #55A5FF;
 }
 
 .works__cash-out-man {
@@ -283,6 +359,11 @@ p {
 .benefits__btn {
   width: 228px;
   max-width: 100%;
+}
+
+.benefits .nav-link {
+  padding-left: 0;
+  padding-right: 0;
 }
 
 /* joining block */
