--- a/css/recycled/buttons.css
+++ b/css/recycled/buttons.css
@@ -5,6 +5,13 @@
   padding: 8px 40px;
 }
 
+.nav-burger .btn-green {
+  max-width: 215px;
+  width: 100%;
+  padding-top: 16px;
+  padding-bottom: 16px;
+}
+
 .btn-dark {
   background: #2D3C5A;
   box-shadow: 0px 4px 40px rgba(45, 60, 90, 0.05);
@@ -54,17 +61,25 @@
   border-radius: 8px;
 }
 
-.btn-close {
+.modal__feedback-form .btn-close {
   position: absolute;
   right: 41px;
   top: 41px;
 }
 
 .modal-header .btn-close {
-  right: 22px;
-  top: 31px;
+  margin-top: 24px;
+  margin-right: 24px;
 }
 
 .btn-blue:focus, .btn-green:focus, .btn-dark:focus, .btn-close:focus, .navbar-toggler:focus {
   box-shadow: none;
+}
+
+@media screen and (max-width: 360px) {
+  .btn-blue {
+    font-size: 12px;
+    font-weight: 400;
+    line-height: 24px;
+  }
 }
