--- a/css/recycled/paddings-and-margins.css
+++ b/css/recycled/paddings-and-margins.css
@@ -18,6 +18,12 @@
   margin-bottom: 60px;
 }
 
+@media screen and (max-width: 992px) {
+  .mb-xl {
+    margin-bottom: 32px;
+  }
+}
+
 @media screen and (max-width: 360px) {
   .mb-m {
     margin-bottom: 18px;
