--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,5 @@
 .remove-link-styles {
   text-decoration: none;
-  color: inherit;
 }
 
 /* card styles */
@@ -12,31 +11,43 @@
   border-radius: 24px;
 }
 
-.card-telegram {
+.contact .card-border {
+  padding: 35px 65px;
+}
+
+.contact .row > * {
+  padding: 0;
+}
+
+.contact a {
+  color: inherit;
+}
+
+.card-telegram, .card-viber, .card-facebook {
+  border-radius: 24px;
+  padding: 30px 0;
   width: 160px;
+}
+
+.q-and-a .card-body {
+  padding: 0;
+}
+
+.card-telegram {
   background: rgba(73, 165, 232, 0.1);
   border-color: rgba(73, 165, 232, 0.1);
-  border-radius: 24px;
+  margin-right: 30px;
 }
 
 .card-viber {
-  width: 160px;
   background: rgba(136, 97, 178, 0.1);
   border-color: rgba(136, 97, 178, 0.1);
-  border-radius: 24px;
 }
 
 .card-facebook {
-  width: 160px;
   background: rgba(74, 153, 247, 0.1);
   border-color: rgba(74, 153, 247, 0.1);
-  border-radius: 24px;
-}
-
-.contact__cards .card-body {
-  width: 350px;
-  max-width: 100%;
-  padding: 35px 65px;
+  margin-left: 30px;
 }
 
 /* tags styles */
@@ -57,13 +68,41 @@ section:last-child {
 }
 
 footer {
-  margin-top: 60px;
+  margin-top: 36px;
+  margin-bottom: 80px;
 }
 
 /* bootstrap */
 
 p {
   margin: 0;
+}
+
+.accordion {
+  border-radius: 14px !important;
+  background: #FFF !important;
+  box-shadow: 0px 0px 50px 0px rgba(45, 60, 90, 0.05) !important;
+}
+
+.accordion > * {
+  background-color: inherit;
+  border: inherit;
+  border-top-right-radius: inherit !important;
+  border-top-left-radius: inherit !important;
+}
+
+.accordion-button::after {
+  background-image: url("/img/chevron_down.svg");
+}
+
+.accordion-button:not(.collapsed)::after {
+  background-image: url("/img/chevron_down_dark.svg");
+  transform: none;
+}
+
+.accordion .accordion-button:not(.collapsed) {
+  background-color: transparent;
+  color: inherit;
 }
 
 .nav-pills .nav-link.active, .nav-pills .show > .nav-link {
@@ -84,6 +123,11 @@ p {
   padding-right: 20px;
 }
 
+.navbar {
+  padding-bottom: 0;
+  margin-bottom: 100px;
+}
+
 .works .nav-pills {
   margin-left: 100px;
 }
@@ -91,7 +135,6 @@ p {
 .works .nav-link {
   padding: 0 0 0 30px;
   margin-bottom: 40px;
-  /*padding-left: 30px;*/
 }
 
 .works .nav-link::before {
@@ -122,14 +165,6 @@ p {
 
 .works .nav-pills .nav-link {
   position: relative;
-}
-
-.operations .col {
-  padding-right: 0;
-}
-
-.operations-amounts .col {
-  padding-left: 0;
 }
 
 .benefits .nav-link {
@@ -171,14 +206,6 @@ p {
   color: #969DAC;
 }
 
-/*.navbar .nav-link:first-child {*/
-/*  padding-left: 0;*/
-/*}*/
-
-/*.navbar .nav-link:last-child {*/
-/*  padding-right: 0;*/
-/*}*/
-
 .navbar-light .navbar-toggler {
   border: none;
 }
@@ -201,7 +228,7 @@ p {
 }
 
 .modal-size {
-  width: 245px;
+  width: 66.66%;
   max-width: none;
   height: 100%;
   margin: 0;
@@ -243,20 +270,13 @@ p {
   background: #F7FBFF;
   border-radius: 24px;
   height: 540px;
-  width: 540px;
 }
 
 .works__inner {
   position: absolute;
-  top: 80px;
   left: 50%;
   transform: translateX(-50%);
-  width: 330px;
-  bottom: 0px;
-  background-color: #ffffff;
-  border-top-left-radius: 24px;
-  border-top-right-radius: 24px;
-  padding: 26px 14px;
+  bottom: 0;
 }
 
 .works__img {
@@ -273,23 +293,10 @@ p {
   fill: #55A5FF;
 }
 
-.works__cash-out-man {
-  position: absolute;
-  left: 18px;
-  bottom: 0;
-}
-
 /* cash-out block */
 .cash-out {
   position: absolute;
-  right: 60px;
-  top: 60px;
-  width: 330px;
-  height: 280px;
-  padding: 24px 14px;
-  background: #FFFFFF;
-  box-shadow: 0px 40px 50px rgba(45, 60, 90, 0.05);
-  border-radius: 24px;
+  bottom: 0;
 }
 
 .works__text {
@@ -390,14 +397,20 @@ p {
   padding-bottom: 24px;
 }
 
+.q-and-a__container {
+  max-width: 960px;
+  margin-left: auto;
+  margin-right: auto;
+}
+
 .accordion {
   display: inline-block;
   width: max-content;
+  padding: 20px 32px;
 }
 
-.accordion .accordion-button:not(.collapsed) {
-  background-color: transparent;
-  color: inherit;
+.accordion-button, .accordion-body {
+  padding: 12px 0;
 }
 
 /* contact section */
@@ -416,26 +429,56 @@ p {
 }
 
 .contact__email-img {
-  margin-top: 50px;
+  margin-top: 32px;
 }
 
 .contact__email {
-  margin-top: 16px;
-  margin-bottom: 26px;
+  margin-top: 14px;
+  margin-bottom: 24px;
 }
 
 .contact__phone {
-  margin-top: 16px;
+  margin-top: 14px;
+}
+
+.contact__user {
+  position: relative;
+  padding-bottom: 14px;
+}
+
+.contact__user::after {
+  content: "";
+  position: absolute;
+  bottom: 0;
+  left: 10%;
+  width: 80%;
+  height: 2px;
+  background-color: #F0F0F0;
 }
 
 /* modal */
+
+.nav-burger .modal-content {
+  border: none;
+  border-radius: initial;
+}
+
+.modal-nav {
+  padding-left: 0;
+  margin: 128px 15px;
+  list-style: none;
+}
+
+.modal-nav .nav-link {
+  padding: 0;
+}
 
 .modal-container {
   width: 730px;
   max-width: 100%;
 }
 
-.modal-content {
+.modal__feedback-form .modal-content {
   background: #FFFFFF;
   box-shadow: 0px 40px 50px rgba(45, 60, 90, 0.05);
   border-radius: 24px;
@@ -468,15 +511,63 @@ p {
   border: 1px solid #E0E2E6;
 }
 
+.accordion-button:focus {
+  box-shadow: none;
+}
+
 .form-check-input:checked {
   background-color: #2D3C5A;
   border-color: #2D3C5A;
 }
 
 @media screen and (max-width: 1440px) {
+  br {
+    display: none;
+  }
+
   .container {
     position: relative;
     width: 1110px;
+  }
+}
+
+@media (max-width: 1200px) {
+  .works__images {
+    width: 100%;
+  }
+}
+
+@media (max-width: 992px) {
+  .salary__image {
+    padding-left: 10px;
+  }
+
+  .works .nav-pills {
+    margin-left: 15px;
+  }
+
+  .works__content {
+    padding-bottom: 32px;
+  }
+
+  .q-and-a__container {
+    max-width: 100%;
+    padding-left: 15px;
+    padding-right: 15px;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .card-telegram, .card-viber, .card-facebook {
+    width: 100px;
+  }
+
+  .card-telegram {
+    margin-right: 15px;
+  }
+
+  .card-facebook {
+    margin-left: 15px;
   }
 }
 
@@ -505,6 +596,10 @@ p {
     border: none;
     border-radius: 0;
     padding: 0;
+  }
+
+  .navbar {
+    margin-bottom: 0;
   }
 
   .salary__direction {
@@ -544,5 +639,38 @@ p {
   .salary__visa {
     margin-top: 28px;
     justify-content: center;
+  }
+
+  .works .nav-pills {
+    margin-left: 15px;
+  }
+
+  .works__images {
+    width: 100%;
+  }
+
+  .works__rounded {
+    height: 344px;
+  }
+
+  .benefits {
+    padding-bottom: 70px;
+  }
+
+  .q-and-a {
+    padding-top: 60px;
+  }
+
+  .q-and-a__email {
+    text-align: center;
+  }
+
+  .contact .card-border {
+    padding: 30px;
+  }
+
+  footer {
+    margin-top: 16px;
+    margin-bottom: 40px;
   }
 }
