--- a/css/recycled/buttons.css
+++ b/css/recycled/buttons.css
@@ -14,14 +14,14 @@
 
 .btn-dark {
   background: #2D3C5A;
-  box-shadow: 0px 4px 40px rgba(45, 60, 90, 0.05);
+  box-shadow: 0 4px 40px rgba(45, 60, 90, 0.05);
   border-radius: 8px;
   padding: 14px 24px;
 }
 
 .btn-green:hover, .btn-dark:hover {
   color: #FFFFFF;
-  box-shadow: 0px 20px 30px rgba(45, 60, 90, 0.1);
+  box-shadow: 0 20px 30px rgba(45, 60, 90, 0.1);
 }
 
 .btn-blue {
@@ -34,7 +34,7 @@
 
 .btn-blue:hover {
   color: #55A5FF;
-  box-shadow: 0px 20px 30px rgba(45, 60, 90, 0.1);
+  box-shadow: 0 20px 30px rgba(45, 60, 90, 0.1);
 }
 
 .btn-language {
@@ -76,10 +76,27 @@
   box-shadow: none;
 }
 
+@media screen and (max-width: 768px) {
+  .modal__feedback-form .btn-close {
+    right: 25px;
+    top: 25px;
+  }
+
+  .modal__feedback-form .modal-dialog {
+    padding: 50px 15px;
+    margin: 0;
+  }
+}
+
 @media screen and (max-width: 360px) {
   .btn-blue {
     font-size: 12px;
     font-weight: 400;
     line-height: 24px;
+  }
+
+  .modal__feedback-form .btn-close {
+    right: 14px;
+    top: 14px;
   }
 }
