--- a/css/style.css
+++ b/css/style.css
@@ -2,15 +2,6 @@
   text-decoration: none;
 }
 
-/* card styles */
-
-.card-border {
-  box-sizing: border-box;
-  background: #FFFFFF;
-  border: 1px solid #E6E6E6;
-  border-radius: 24px;
-}
-
 .contact .card-border {
   padding: 35px 65px;
 }
@@ -21,6 +12,15 @@
 
 .contact a {
   color: inherit;
+}
+
+/* card styles */
+
+.card-border {
+  box-sizing: border-box;
+  background: #FFFFFF;
+  border: 1px solid #E6E6E6;
+  border-radius: 24px;
 }
 
 .card-telegram, .card-viber, .card-facebook {
@@ -72,37 +72,30 @@ footer {
   margin-bottom: 80px;
 }
 
-/* bootstrap */
-
 p {
   margin: 0;
 }
 
-.accordion {
-  border-radius: 14px !important;
-  background: #FFF !important;
-  box-shadow: 0px 0px 50px 0px rgba(45, 60, 90, 0.05) !important;
+
+/* nav block */
+
+.container-fluid {
+  padding: 0;
 }
 
-.accordion > * {
-  background-color: inherit;
-  border: inherit;
-  border-top-right-radius: inherit !important;
-  border-top-left-radius: inherit !important;
+.nav-link:hover {
+  color: #969DAC;
 }
 
-.accordion-button::after {
-  background-image: url("/img/chevron_down.svg");
+.navbar-light .navbar-toggler {
+  border: none;
 }
 
-.accordion-button:not(.collapsed)::after {
-  background-image: url("/img/chevron_down_dark.svg");
-  transform: none;
-}
-
-.accordion .accordion-button:not(.collapsed) {
-  background-color: transparent;
-  color: inherit;
+.nav-link {
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 19px;
+  color: #969DAC;
 }
 
 .nav-pills .nav-link.active, .nav-pills .show > .nav-link {
@@ -128,87 +121,7 @@ p {
   margin-bottom: 100px;
 }
 
-.works .nav-pills {
-  margin-left: 100px;
-}
-
-.works .nav-link {
-  padding: 0 0 0 30px;
-  margin-bottom: 40px;
-}
-
-.works .nav-link::before {
-  content: "";
-  position: absolute;
-  top: 0;
-  bottom: 0;
-  left: 0;
-  width: 2px;
-  background-color: #F0F0F0;
-}
-
-.works .nav-link.active::before {
-  background-color: #55A5FF;
-  height: 30%;
-  bottom: auto;
-}
-
-.works .nav-link.active::after {
-  content: "";
-  position: absolute;
-  top: 30%;
-  bottom: 0;
-  left: 0;
-  width: 2px;
-  background-color: #F0F0F0;
-}
-
-.works .nav-pills .nav-link {
-  position: relative;
-}
-
-.benefits .nav-link {
-  position: relative;
-  padding-bottom: 14px;
-}
-
-.benefits .nav-link::after {
-  content: "";
-  position: absolute;
-  bottom: 0;
-  left: -10%;
-  width: 120%;
-  height: 2px;
-  background-color: #F0F0F0;
-}
-
-.benefits .nav-link.active::after {
-  background-color: #55A5FF;
-}
-
-.benefits .nav-item {
-  width: 160px;
-}
-
-/* nav block */
-.container-fluid {
-  padding: 0;
-}
-
-.nav-link {
-  font-weight: 400;
-  font-size: 16px;
-  line-height: 19px;
-  color: #969DAC;
-}
-
-.nav-link:hover {
-  color: #969DAC;
-}
-
-.navbar-light .navbar-toggler {
-  border: none;
-}
+/* header section */
 
 .dropdown-menu {
   border: 1px solid #F0F0F0;
@@ -221,21 +134,6 @@ p {
 
 .header .modal-dialog {
   margin: 0;
-}
-
-.modal.fade .modal-dialog {
-  margin-left: auto;
-}
-
-.modal-size {
-  width: 66.66%;
-  max-width: none;
-  height: 100%;
-  margin: 0;
-}
-
-.modal-size .modal-content {
-  height: 100%;
 }
 
 /* salary section */
@@ -289,22 +187,21 @@ p {
   height: 24px;
 }
 
-.active .works__icon-color {
-  fill: #55A5FF;
-}
-
-/* cash-out block */
-.cash-out {
-  position: absolute;
-  bottom: 0;
-}
-
 .works__text {
   font-weight: 600;
   font-size: 18px;
   line-height: 28px;
   color: #2D3C5A;
   margin-bottom: 5px;
+}
+
+.works .nav-pills {
+  margin-left: 100px;
+}
+
+.cash-out {
+  position: absolute;
+  bottom: 0;
 }
 
 .cash-out__funds-text {
@@ -320,8 +217,6 @@ p {
   left: 14px;
   right: 14px;
 }
-
-/* output block */
 
 .output {
   margin-bottom: 40px;
@@ -373,9 +268,7 @@ p {
   padding-right: 0;
 }
 
-/* joining block */
-
-.joining {
+.benefits__joining {
   margin-top: 42px;
   margin-bottom: 14px;
 }
@@ -389,6 +282,7 @@ p {
 }
 
 .q-and-a__email {
+  text-align: center;
   margin-top: 42px;
   margin-bottom: 80px;
 }
@@ -397,10 +291,10 @@ p {
   padding-bottom: 24px;
 }
 
-.q-and-a__container {
-  max-width: 960px;
-  margin-left: auto;
-  margin-right: auto;
+.q-and-a__margin {
+  max-width: 100%;
+  margin-left: 260px;
+  margin-right: 260px;
 }
 
 .accordion {
@@ -409,8 +303,39 @@ p {
   padding: 20px 32px;
 }
 
+.accordion {
+  border-radius: 14px !important;
+  background: #FFF !important;
+  box-shadow: 0 0 50px 0 rgba(45, 60, 90, 0.05) !important;
+}
+
+.accordion > * {
+  background-color: inherit;
+  border: inherit;
+  border-top-right-radius: inherit !important;
+  border-top-left-radius: inherit !important;
+}
+
+.accordion-button::after {
+  background-image: url("/img/chevron_down.svg");
+}
+
+.accordion-button:not(.collapsed)::after {
+  background-image: url("/img/chevron_down_dark.svg");
+  transform: none;
+}
+
+.accordion .accordion-button:not(.collapsed) {
+  background-color: transparent;
+  color: inherit;
+}
+
 .accordion-button, .accordion-body {
   padding: 12px 0;
+}
+
+.accordion-button:focus {
+  box-shadow: none;
 }
 
 /* contact section */
@@ -458,6 +383,21 @@ p {
 
 /* modal */
 
+.modal.fade .modal-dialog {
+  margin-left: auto;
+}
+
+.modal-size {
+  width: 66.66%;
+  max-width: none;
+  height: 100%;
+  margin: 0;
+}
+
+.modal-size .modal-content {
+  height: 100%;
+}
+
 .nav-burger .modal-content {
   border: none;
   border-radius: initial;
@@ -474,18 +414,18 @@ p {
 }
 
 .modal-container {
-  width: 730px;
-  max-width: 100%;
+  width: 100%;
+  max-width: 730px;
 }
 
 .modal__feedback-form .modal-content {
   background: #FFFFFF;
-  box-shadow: 0px 40px 50px rgba(45, 60, 90, 0.05);
+  box-shadow: 0 40px 50px rgba(45, 60, 90, 0.05);
   border-radius: 24px;
   padding: 32px 95px;
 }
 
-.modal-header, .modal-footer {
+.modal-header, .modal-submit {
   border: none;
   padding: 0;
 }
@@ -499,6 +439,10 @@ p {
   max-width: 100%;
 }
 
+.modal-content .xl-text {
+  padding: 0 40px;
+}
+
 .form-input {
   background: #FFFFFF;
   border: 1px solid #E0E2E6;
@@ -509,10 +453,6 @@ p {
 .form-input:focus, .form-check-input:focus {
   box-shadow: none;
   border: 1px solid #E0E2E6;
-}
-
-.accordion-button:focus {
-  box-shadow: none;
 }
 
 .form-check-input:checked {
@@ -529,11 +469,21 @@ p {
     position: relative;
     width: 1110px;
   }
+
+  .q-and-a__margin {
+    margin-left: 200px;
+    margin-right: 200px;
+  }
 }
 
 @media (max-width: 1200px) {
   .works__images {
     width: 100%;
+  }
+
+  .q-and-a__margin {
+    margin-left: 160px;
+    margin-right: 160px;
   }
 }
 
@@ -549,15 +499,92 @@ p {
   .works__content {
     padding-bottom: 32px;
   }
-
-  .q-and-a__container {
-    max-width: 100%;
-    padding-left: 15px;
-    padding-right: 15px;
+  
+  .q-and-a__margin {
+    margin-left: 120px;
+    margin-right: 120px;
   }
 }
 
 @media screen and (max-width: 768px) {
+  .salary__direction {
+    flex-direction: column;
+  }
+
+  .salary__about {
+    display: contents;
+  }
+
+  .salary__title {
+    order: 1;
+  }
+
+  .salary__sign-in {
+    order: 3;
+    text-align: center;
+  }
+
+  .salary__image {
+    padding-left: 0;
+    order: 2;
+  }
+
+  .salary__sign-in .btn-green {
+    width: 330px;
+  }
+
+  .salary__visa {
+    margin-top: 28px;
+    justify-content: center;
+  }
+
+  .q-and-a__margin {
+    margin-left: 60px;
+    margin-right: 60px;
+  }
+
+  .modal__feedback-form .modal-content {
+    padding: 24px 29px;
+  }
+
+  .navbar {
+    margin-bottom: 0;
+  }
+
+}
+
+@media screen and (max-width: 576px) {
+  .container {
+    width: 480px;
+  }
+
+  .modal-width {
+    width: 100%;
+  }
+
+  .salary__image-visibility-1 {
+    display: none;
+  }
+
+  .salary__image-visibility-2 {
+    display: block;
+  }
+
+  .salary__image {
+    display: flex;
+    margin: auto;
+    justify-content: center;
+  }
+
+  .salary__name .m-text {
+    text-align: center;
+  }
+
+  .q-and-a__margin {
+    margin-left: 30px;
+    margin-right: 30px;
+  }
+
   .card-telegram, .card-viber, .card-facebook {
     width: 100px;
   }
@@ -568,6 +595,21 @@ p {
 
   .card-facebook {
     margin-left: 15px;
+  }
+}
+
+@media screen and (max-width: 480px) {
+  .container {
+    width: 360px;
+  }
+
+  .works__rounded {
+    height: 360px;
+  }
+
+  .q-and-a__margin {
+    margin-left: 15px;
+    margin-right: 15px;
   }
 }
 
@@ -598,49 +640,6 @@ p {
     padding: 0;
   }
 
-  .navbar {
-    margin-bottom: 0;
-  }
-
-  .salary__direction {
-    flex-direction: column;
-  }
-
-  .salary__about {
-    display: contents;
-  }
-
-  .salary__title {
-    order: 1;
-  }
-
-  .salary__sign-in {
-    order: 3;
-    text-align: center;
-  }
-
-  .salary__image {
-    padding-left: 0;
-    order: 2;
-  }
-
-  .salary__image-visibility-1 {
-    display: none;
-  }
-
-  .salary__image-visibility-2 {
-    display: block;
-  }
-
-  .salary__sign-in .btn-green {
-    width: 330px;
-  }
-
-  .salary__visa {
-    margin-top: 28px;
-    justify-content: center;
-  }
-
   .works .nav-pills {
     margin-left: 15px;
   }
@@ -661,10 +660,6 @@ p {
     padding-top: 60px;
   }
 
-  .q-and-a__email {
-    text-align: center;
-  }
-
   .contact .card-border {
     padding: 30px;
   }
@@ -672,5 +667,9 @@ p {
   footer {
     margin-top: 16px;
     margin-bottom: 40px;
+  }
+
+  .modal-content .xl-text {
+    padding: 0 20px;
   }
 }
